# contacts_app

./: .gitignore  README.md  pyproject.toml  run_flask.sh  run_tailwind.sh  table.txt
app/: db.py  main.py  tailwind.config.js
app/static/: input.css  output.css
app/templates/: _macros.html  base.html  contact.html  failed.html  index.html  new.html  success.html
app/templates/contacts/: all.html  contact.html  new.html
app/templates/index/: index.html
app/templates/status/: failed.html  success.html  success_all.html
