[project]
name = "contacts_app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "leobellap", email = "leobellap@gmail.com"},
]
dependencies = [
    "Flask>=3.0.3",
    "SQLAlchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
